2006-09-29  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* changed default array designator value to -1; 
	  add check for positive designators in check_designator_list
	* more nullness stuff (results are added to the previous log entry)
	

2006-09-27  Hendrik Tews  <tews@debian>

	* regression test up to 857
	
	* nullable analysis for xml fields
	  - fields with nullable assignment for which at least one
	  regression test gives NULL

	  TS_name.nondependentVar
	  E_variable.nondependentVar
	  Function.receiver
	  Function.retVar
	  E_throw.globalVar
	  Handler.globalVar
	  MemberInit.base
	  MemberInit.ctorVar
	  E_new.arraySize
	  E_new.ctorVar
	  E_new.heapVar
	  MemberInit.member
	  Variable.type	            IFF Variable.flags & DF_NAMESPACE
	  E_constructor.ctorVar
	  EnumType.name
	  CompoundType.name
	  CompoundType.instName
	  BaseClassSpec.type
	  E_variable.var
	  PQ_qualifier.qualifierVar
	  E_variable.type
	  E_fieldAcc.field
	  IN_ctor.ctorVar
	  TS_name.var
	  TS_elaborated.atype
	  Declarator.var
	  Declarator.type
	
	  - fields without nullable comment, that happen to be null in at
	  elast one regression test

	  EnumType.typedefVar

	* new circularity via
	  Variable.varValue
	

2006-09-25  Hendrik Tews  <tews@tandem.cs.ru.nl>

	AST
	* added FF_PRIVAT flag for private fields that need to use an
	accessor method; treat private fields in generated output
	* added ObjList support into ListClass; however, ObjList's are not
	collected into listClasses
	* output generation for ObjList's in fields in three new CGen
	methods: emitOcamlFromListOrComment, emitOcamlFromListsClass,
	emitOcamlFromLists
	* support unsigned_long and unsigned_int typdef's

	ELSA
	* enum DeclaratorContext moved from cc_tcheck.ast/gnu.ast into
	cc_flags.h 
	* use unsigned_long/int typedef in some xml fields
	* added alias for cType/atomicType for fields that use a subclass;
	this subtype information is lost in ocaml

2006-09-19  Hendrik Tews  <tews@debian>

	AST